# subcollider

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: CI.yml  ci.yml
_codeql_build_dir/: example_basic  subcollider_tests
docs/: UGENS.md
examples/: basic_example.cpp  jack_example.cpp  jack_playback_example.cpp  jack_xplay.cpp  moog_example.cpp  supersaw_example.cpp
include/: subcollider.h
include/subcollider/: AudioBuffer.h  AudioLoop.h  Buffer.h  BufferAllocator.h  ExampleVoice.h  types.h
include/subcollider/ugens/: Balance2.h  BufRd.h  CombC.h  DBAmp.h  DCBlock.h  Downsampler.h  EnvelopeADSR.h  EnvelopeAR.h  FVerb.h  ImprovedMoogLadder.h  KrajeskiMoogLadder.h  LFNoise2.h  LFTri.h  Lag.h  LagLinear.h  LinLin.h  MicrotrackerMoogLadder.h  MusicDSPMoogLadder.h  OberheimMoogLadder.h  OnePoleLPF.h  Pan2.h  Phasor.h  RKSimulationMoogLadder.h  RLPF.h  SawDPW.h  SinOsc.h  StilsonMoogLadder.h  SuperSaw.h  Tape.h  Wrap.h  XFade2.h  XLine.h  XPlay.h
include/subcollider/ugens/fverb/: CMakeLists.txt  FVerb.cpp  FVerbDSP.h
tests/: benchmark.cpp  test_audioloop.cpp  test_balance2.cpp  test_buffer.cpp  test_bufferallocator.cpp  test_bufrd.cpp  test_bufrd_phasor.cpp  test_combc.cpp  test_dbamp.cpp  test_dcblock.cpp  test_downsampler.cpp  test_envelopeadsr.cpp  test_envelopear.cpp  test_examplevoice.cpp  test_fverb.cpp  test_laglinear.cpp  test_lfnoise2.cpp  test_lftri.cpp  test_linlin.cpp  test_main.cpp  test_moogladders.cpp  test_onepolelpf.cpp  test_pan2.cpp  test_phasor.cpp  test_playback_oversampling.cpp  test_rlpf.cpp  test_sawdpw.cpp  test_sinosc.cpp  test_supersaw.cpp  test_tape.cpp  test_types.cpp  test_wrap.cpp  test_xfade2.cpp  test_xline.cpp  test_xplay.cpp
